2001-11-24  Per Bothner  <per@bothner.com>

	* build.xml, build.properties:  Update from Jim White.

	* Makefile.am:  Add more directories (conditionally) to JAR_DEPS.

	* kawa/standard/convert.java:  Moved to gnu.kawa.functions.Convert.
	* kawa/standard/Makefile.am:  Update accordingly
	* kawa/standard/Scheme.java (initScheme):  Likewise.

	* kawa/standard/Scheme.java (getTypeFor):  Map "java.lang.String"
	to Type.tostring_type, for convenience.

	* kawa/standard/{define_variable.java,let.java,let_syntax.java,
	letrec.java,load.java,module_name.java,require.java}:  Use 'name'
	rather than `name' in messages.
	
	* kawa/standard/map.java:  The makeGetField helper methods was moved
	from Expression to SlotGet.
	* kawa/lang/Lambda.java: makeCoercion moved from Expression to Convert.

2001-11-23  Per Bothner  <per@bothner.com>

	* kawa/lang/Lambda.java (rewriteBody):  Call setReturnType.

	* kawa/lang/AutoloadSyntax.java, kawa/lang/Lambda.java,
	kawa/lang/Macro.java:  Change errors message to use 'name' not `name'.

2001-11-19  Per Bothner  <per@bothner.com>

	* kawa/standard/call_with_values.java (apply):  Use CallContext's
	getArgs method.  Fixes testsuite regression.

2001-11-18  Per Bothner  <per@bothner.com>

	Add support building Kawa using Ant, contributed by Jim White
	with some hacking by yours truly.
	* build.xml:  New file, with build rules for Ant,
	* build.properties:  New file, with comment-out settable properties.
	* Makefile.am (EXTRA_DIST):  Add build.xml and build.properties.
	* configure.in (AC_OUTPUT):  Also make gnu/kawa/ant/Makefile.

2001-11-18  Per Bothner  <per@bothner.com>

	* kawa/standard/define_namespace.java:  Moved to gnu/kawa/xml and
	renamed to DefineNamespace.java.
	* kawa/standard/Makefile,am, kawa/standard/Scheme.java: Update.

2001-11-12  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (initScheme):  Define current-error-port.

	* kawa/standard/define_namespace.java (scanForDefinitions):