@@ -1,3 +1,8 @@
+2001-11-26  Per Bothner  <per@bothner.com>
+
+	* build.xml (build.dir):  Change to basedir.
+	(echo):  Also output dist.kawa.jar.  Avoids tabs.
+
 2001-11-24  Per Bothner  <per@bothner.com>
 
 	* build.xml, build.properties:  Update from Jim White.
